added displays for weather

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,7 @@ html {
 		margin-bottom: 10px;
 	}
 
-	.pure-menu-item {
+	.pure-menu-link {
 		color: #000000;
 	}
 
@@ -125,16 +125,24 @@ html {
 
 	.display-event {
 		margin: 10px auto;
-		max-width: 75%;
+		max-width: 100%;
 		background-color: #ffffff;
 		border: 1px solid #000000;
 		border-radius: 25px;
 	}
 
-	table, th {
+	table, tr {
 		margin: 10px auto;
-		max-width: 100%;
+		width: 100%;
 		background-color: #ffffff;
+	}
+
+	.pure-table {
+		border: none;
+	}
+
+	tr {
+		text-align: center;
 	}
 
 	.pure-g [class *= "event-header"] {
