--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,6 +100,13 @@ html {
 	font-size: 1.25em;
 	}
 
+	.dev {
+		margin: 10px auto;
+		background-color: #ffffff;
+		border: 1px solid #000000;
+		border-radius: 25px;
+	}
+
 	.dev-pic {
 		width: 150px;
 		height: 200px;
@@ -115,7 +122,7 @@ html {
 		margin: 10px auto;
 	}
 
-	header, .explain, .select, .greeter-form {
+	header, .explain, .select, .greeter-form, .about {
 		margin: 10px auto;
 		max-width: 768px;
 		background-color: #ffffff;
