--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,11 +100,17 @@ html {
 	font-size: 1.25em;
 	}
 
-	.dev {
+	.dev-header {
 		margin: 10px auto;
 		background-color: #ffffff;
 		border: 1px solid #000000;
 		border-radius: 25px;
+		max-width: 768px;
+	}
+
+	.pure-g [class *= "dev-header"] {
+	font-family: 'Alfa Slab One', serif;
+	font-size: 2.75em;
 	}
 
 	.dev-pic {
