--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,8 +35,7 @@ html {
 
 	.explain {
 		padding: 10px 0;
-		margin-top: 10px;
-		margin-bottom: 10px;
+		margin: 10px 0;
 	}
 
 	.pure-menu-link {
@@ -102,10 +101,11 @@ html {
 
 	.dev-header {
 		margin: 10px auto;
+		padding: 10px 0;
 		background-color: #ffffff;
 		border: 1px solid #000000;
 		border-radius: 25px;
-		max-width: 768px;
+		width: 75%;
 	}
 
 	.pure-g [class *= "dev-header"] {
@@ -128,7 +128,7 @@ html {
 		margin: 10px auto;
 	}
 
-	header, .explain, .select, .greeter-form, .about {
+	header, .explain, .select, .greeter-form, .about, .weather {
 		margin: 10px auto;
 		max-width: 768px;
 		background-color: #ffffff;
