--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,17 @@ html {
 		color: #000000;
 	}
 
+/* -----WEATHER----- */
+.pure-g [class *= "weather"] {
+	font-family: 'Quattrocento', serif;
+	font-size: 1.5em;
+}
+
+	.weather {
+		padding: 10px 0;
+		margin: 10px 0;
+	}
+
 /* -----SELECT----- */
 .pure-g [class *= "select"] {
 	font-family: 'Alfa Slab One', serif;
